--- a/AnimalCare/Views/Shared/_Layout.cshtml
+++ b/AnimalCare/Views/Shared/_Layout.cshtml
@@ -83,7 +83,11 @@
                                             <i class="bi bi-person-badge-fill"></i> Veterinarians
                                         </a>
                                     </li>
-
+                                    <li>
+                                        <a class="dropdown-item d-flex gap-2 align-items-center" asp-controller="Receptionists" asp-action="Index">
+                                            <i class="bi bi-person-workspace"></i> Receptionists
+                                        </a>
+                                    </li>
                                     <li>
                                         <a class="dropdown-item d-flex gap-2 align-items-center" asp-controller="VetSchedules" asp-action="Index">
                                             <i class="bi bi-calendar-check-fill"></i> Schedules
